--- a/assessment .html
+++ b/assessment .html
@@ -13,7 +13,7 @@
    <title>haru1126が作ったあなたのいいところ診断</title>
 </head>
 <body>
-  <h1>あなたにのいいところは？</h1>
+  <h1>あなたのいいところは？</h1>
   <p>診断したい名前を入れてください</p>
   <input type="text" id="user-name" size="40" maxlength="20">
   <button id="assessment">診断する</button>
