--- a/assessment .html
+++ b/assessment .html
@@ -13,7 +13,7 @@
       content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。"
     >
     <link rel="stylesheet" href="assessment.css">
-    <title>が作ったあなたのいいところ診断</title>
+    <title>tomokosanoが作ったあなたのいいところ診断</title>
   </head>
   <body>
     <h1>あなたのいいところは?</h1>
